# s3-local-folder-sync

./: README.md  config.py  config.yml  log_config.py  main.py  pyproject.toml  sync.py  utils.py
